--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
     "fastify": "^4.25.2",
-    "puppeteer": "^21.7.0"
+    "puppeteer": "^21.7.0",
+    "puppeteer-page-proxy": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.8",
